| Summary: | ASTERISK-29261: res_pjsip: user=phone validation fail for isup numbers containing *# | ||
| Reporter: | Mark Petersen (roadkill) | Labels: | |
| Date Opened: | 2021-01-22 07:02:44.000-0600 | Date Closed: | 2021-01-27 11:05:41.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 18.0.0 18.1.0 18.1.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | if From number contain * or # asterisk will not add user=phone
Currently only number that uses AST_DIGIT_ANYNUM can have "user=phone" but the validation should use AST_DIGIT_ANY this is a problem when you want to send call to ISUP as they will disregard the From header and either replace From with anonymous or with p-asserted-identity https://tools.ietf.org/html/rfc3966#section-5.1.3 for some reason when this section was first added (17 Oct 2014) the comment in the code use the correct AST_DIGIT_ANY but the actual code uses AST_DIGIT_ANYNUM :-/ | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-01-22 07:02:45.962-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Mark Petersen (roadkill) 2021-01-22 07:04:25.403-0600 #define AST_DIGIT_ANY "0123456789#*ABCD" #define AST_DIGIT_ANYNUM "0123456789" By: Joshua C. Colp (jcolp) 2021-01-22 07:08:54.290-0600 It appears as though the behavior was copied from chan_sip, as it also uses AST_DIGIT_ANYNUM. By: Mark Petersen (roadkill) 2021-01-22 07:51:00.998-0600 if needed I can add the change to chan_sip.c as well I just do no have any way of testing at the moment By: Friendly Automation (friendly-automation) 2021-01-27 11:05:42.717-0600 Change 15337 merged by George Joseph: res/res_pjsip.c: allow user=phone when number contain *# [https://gerrit.asterisk.org/c/asterisk/+/15337|https://gerrit.asterisk.org/c/asterisk/+/15337] By: Friendly Automation (friendly-automation) 2021-01-27 11:06:12.635-0600 Change 15336 merged by George Joseph: res/res_pjsip.c: allow user=phone when number contain *# [https://gerrit.asterisk.org/c/asterisk/+/15336|https://gerrit.asterisk.org/c/asterisk/+/15336] By: Friendly Automation (friendly-automation) 2021-01-27 11:06:34.356-0600 Change 15335 merged by George Joseph: res/res_pjsip.c: allow user=phone when number contain *# [https://gerrit.asterisk.org/c/asterisk/+/15335|https://gerrit.asterisk.org/c/asterisk/+/15335] | ||